fixed porfolio page when viewed on firefox

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
 
 .screenshot-container {
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: space-around;
 }
 .interest-container {
@@ -88,7 +88,6 @@
 }
 .screenshot {
 	width: 15%;
-	height: 15%;
 
 }
 .project-label {
